--- a/Sobre_nosotros.html
+++ b/Sobre_nosotros.html
@@ -53,7 +53,7 @@
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="/assets/img/nosotros/ga.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0">Gabriel Manzano Ruiz</h5>
                             <p class="text-muted mb-1">Erat netus</p>
@@ -75,7 +75,7 @@
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/yo.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Jose Miguel Perusquia Hernandez</strong></h5>
                             <p class="text-muted mb-1">Erat netus</p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/al.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Alexis Guadarrama Cruz    </strong></h5>
                             <p class="text-muted mb-1">Erat netus</p>
@@ -119,7 +119,7 @@
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="/assets/img/nosotros/ya.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0">Jonathan Yahir Contreras</h5>
                             <p class="text-muted mb-1">Erat netus</p>
@@ -141,7 +141,7 @@
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/v8.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Comandante V8</strong></h5>
                             <p class="text-muted mb-1">Erat netus</p>
@@ -163,7 +163,7 @@
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                    <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/ma.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Marian Lizeth Hernandez Garcia</strong></h5>
                             <p class="text-muted mb-1">Erat netus</p>
